--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,9 @@ jobs:
       - name: Send mailer
         uses: dawidd6/action-send-mail@master
         with:
-          server_addr: stmp.ym.163.com
+          server_address: stmp.ym.163.com
           server_port: 994
-          account: ${{secrets.MAIL_USER}}
+          username: ${{secrets.MAIL_USER}}
           password: ${{secrets.MAIL_PASSWORD}}
           sender: no-reply
           from: no-reply@beet.tk - github action
