--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,10 @@ jobs:
         uses: dawidd6/action-send-mail@master
         with:
           server_address: smtp.ym.163.com
-          server_port: 994
+          server_port: 25
           username: ${{secrets.MAIL_USER}}
           password: ${{secrets.MAIL_PASSWORD}}
-          from: no-reply@beet.tk - github action
+          from: no-reply
           to: 1435978213@qq.com
           subject: Weather Today (${{env.REPORT_DATE}})
           body: file://main.html
