--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -2,7 +2,7 @@ name: heroku
 on:
   push:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0/* * *"
   
 
   # Allows you to run this workflow manually from the Actions tab
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: heroku-market
-        run: curl https://springmvc-market.herokuapp.com > heroku-market.html
+        run: curl https://springmvc-market.herokuapp.com > heroku-market.txt
 
       - name: Send mailer
         uses: dawidd6/action-send-mail@master
@@ -29,5 +29,5 @@ jobs:
           from: no-reply
           to: 1435978213@qq.com
           subject: Weather Today (${{env.REPORT_DATE}})
-          body: file://heroku-market.html
+          body: file://heroku-market.txt
           content_type: text/html
