--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -2,9 +2,8 @@ name: heroku
 on:
   push:
   schedule:
-    - cron: "0 0/* * *"
+    - cron: "*/60 * * *"
   
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
