--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -2,7 +2,7 @@ name: heroku
 on:
   push:
   schedule:
-    - cron: "*/60 * * *"
+    - cron: "*/60 * * * *"
   
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
