--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -2,7 +2,7 @@ name: heroku
 on:
   push:
   schedule:
-    - cron: "*/60 * * * *"
+    - cron: '*/60 * * * *'
   
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -27,6 +27,6 @@ jobs:
           password: ${{secrets.MAIL_PASSWORD}}
           from: no-reply
           to: 1435978213@qq.com
-          subject: Weather Today (${{env.REPORT_DATE}})
+          subject: 请求 heroku-market
           body: file://heroku-market.txt
           content_type: text/html
