--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -2,7 +2,7 @@ name: heroku
 on:
   push:
   schedule:
-    - cron: '*/60 * * * *'
+    - cron: '*/20 * * * *'
   
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -16,17 +16,4 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: heroku-market
-        run: curl https://springmvc-market.herokuapp.com > heroku-market.txt
-
-      - name: Send mailer
-        uses: dawidd6/action-send-mail@master
-        with:
-          server_address: smtp.ym.163.com
-          server_port: 465
-          username: ${{secrets.MAIL_USER}}
-          password: ${{secrets.MAIL_PASSWORD}}
-          from: no-reply
-          to: 1435978213@qq.com
-          subject: 请求 heroku-market
-          body: file://heroku-market.txt
-          content_type: text/html
+        run: curl https://springmvc-market.herokuapp.com
