--- a/.github/workflows/heroku.yml
+++ b/.github/workflows/heroku.yml
@@ -16,4 +16,4 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: heroku-market
-        run: curl https://springmvc-market.herokuapp.com
+        run: ping springmvc-market.herokuapp.com && curl https://springmvc-market.herokuapp.com > /dev/null
